test/testdata/nil/invalid_property_access_error.lox
nil.y; // error: property access is not valid for 'nil' object
